# throome

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  CI_CD_SETUP.md  CI_CD_SUMMARY.md  CI_FIXES_APPLIED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_READY.md  DEVELOPMENT_WORKFLOW.md  LOCAL_WORKFLOW_TEST.md  Makefile  PROJECT_SUMMARY.md  README.md  TESTING.md  TEST_RESULTS.md  WORKFLOW_FIXES.md  go.mod  go.sum  test-workflow.sh
.github/workflows/: codeql.yml  docker.yml  publish-go-sdk.yml  publish-nodejs-sdk.yml  publish-python-sdk.yml  release.yml  sdk-tests.yml  test.yml
clusters/: .gitkeep
cmd/throome/: main.go
cmd/throome-cli/: main.go
configs/: cluster.example.yaml  throome.example.yaml
deployments/docker/: Dockerfile  docker-compose.yml
docs/: getting-started.md
examples/go-example/: go.mod  main.go
internal/config/: app_config.go
internal/logger/: logger.go
internal/utils/: errors.go  retry.go  validation.go  validation_test.go
pkg/adapters/: adapter.go
pkg/cluster/: config.go  config_test.go  loader.go  manager.go  manager_test.go  registry.go
pkg/gateway/: gateway.go  server.go  server_activity.go  server_logs.go  server_operations.go  ui.go
pkg/monitor/: activity.go  health.go  (+2 more)
scripts/: monitor-logs.sh
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/examples/: main.py  requirements.txt
sdk/python/src/throome/: __init__.py  client.py  exceptions.py  types.py
test/: docker-compose.yml
ui/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+48 files in other folders)
